--- a/core/pom.xml
+++ b/core/pom.xml
@@ -99,6 +99,10 @@ Bundle-DocURL:
             <artifactId>javax.inject</artifactId>
             <version>1</version>
         </dependency>
+        <dependency>
+            <groupId>com.adobe.acs</groupId>
+            <artifactId>acs-aem-commons-bundle</artifactId>
+        </dependency>
         <!-- OSGi Dependencies -->
         <dependency>
             <groupId>org.osgi</groupId>
@@ -188,6 +192,10 @@ Bundle-DocURL:
         <dependency>
             <groupId>io.wcm</groupId>
             <artifactId>io.wcm.testing.aem-mock.junit5</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.wcm</groupId>
+            <artifactId>io.wcm.testing.wcm-io-mock.sling</artifactId>
         </dependency>
         <dependency>
             <groupId>uk.org.lidalia</groupId>
