--- a/pom.xml
+++ b/pom.xml
@@ -565,6 +565,13 @@
                 <version>1.7.21</version>
                 <scope>provided</scope>
             </dependency>
+            <!-- ACS Commons Dep-->
+            <dependency>
+                <groupId>com.adobe.acs</groupId>
+                <artifactId>acs-aem-commons-bundle</artifactId>
+                <version>4.3.4</version>
+                <scope>provided</scope>
+            </dependency>
             <!-- Adobe AEM Dependencies -->
             <dependency>
                 <groupId>com.adobe.aem</groupId>
@@ -674,6 +681,12 @@
                 <groupId>io.wcm</groupId>
                 <artifactId>io.wcm.testing.aem-mock.junit5</artifactId>
                 <version>2.5.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.wcm</groupId>
+                <artifactId>io.wcm.testing.wcm-io-mock.sling</artifactId>
+                <version>1.0.4</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
